--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,8 @@
   margin: 0%;
   padding: 0%;
 }
+
+@font-face {
+  font-family:FounderGrotesk;
+  src: url(src\fonts\FounderGrotesk\FoundersGrotesk-Semibold.ttf);
+}
